--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,25 @@
 services:
-  app:
+  frontend:
+    container_name: bookit-frontend
     build:
-      context: .
+      context: ./frontend
       dockerfile: Dockerfile
+    restart: unless-stopped
+
+  nginx:
+    container_name: bookit-nginx
+    build: ./nginx
+    depends_on:
+      - frontend
+      - backend
+    ports:
+      - "443:443"
+    restart: unless-stopped
+
+  backend:
+    build:
+      context: backend
+      dockerfile: backend/Dockerfile
     volumes:
       - .:/app
     env_file:
@@ -24,8 +41,8 @@ services:
 
   test:
     build:
-      context: .
-      dockerfile: Dockerfile.test
+      context: backend
+      dockerfile: backend/Dockerfile.test
     environment:
       - DATABASE_URL=postgresql://${POSTGRES_TEST_USERNAME}:${POSTGRES_TEST_PASSWORD}@postgres-test:${POSTGRES_TEST_PORT}/${POSTGRES_TEST_PATH}
     depends_on:
@@ -100,12 +117,12 @@ services:
   prometheus:
     image: prom/prometheus
     volumes:
-      - "./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
-      - "./prometheus/alert.rules.yml:/etc/prometheus/alert.rules.yml"
+      - "./backend/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
+      - "./backend/prometheus/alert.rules.yml:/etc/prometheus/alert.rules.yml"
     command:
       - --config.file=/etc/prometheus/prometheus.yml
-#    ports:
-#      - ${PROMETHEUS_PORT:-9090}:${PROMETHEUS_PORT:-9090}
+    #    ports:
+    #      - ${PROMETHEUS_PORT:-9090}:${PROMETHEUS_PORT:-9090}
     restart: unless-stopped
     profiles:
       - prod
@@ -116,8 +133,8 @@ services:
       - "--path.rootfs=/host"
     volumes:
       - "node_exporter_data:/host:ro,rslave"
-#    ports:
-#      - ${NODE_EXPORTER_PORT:-9100}:${NODE_EXPORTER_PORT:-9100}
+    #    ports:
+    #      - ${NODE_EXPORTER_PORT:-9100}:${NODE_EXPORTER_PORT:-9100}
     restart: unless-stopped
     profiles:
       - prod
@@ -128,8 +145,8 @@ services:
       - ${GRAFANA_PORT:-3000}:${GRAFANA_PORT:-3000}
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - ./backend/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./backend/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     environment:
       - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
