--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -4,20 +4,12 @@ limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
 limit_req_status 429;
 
 server {
-  listen 443 ssl;
-  server_name prod-team-27-kvcek6a0.final.prodcontest.ru;
-
-  ssl_certificate /usr/share/nginx/certs/fullchain.pem;
-  ssl_certificate_key /usr/share/nginx/certs/privkey.pem;
+  listen 1984;
+  server_name 0.0.0.0;
 
   add_header X-Content-Type-Options "nosniff" always;
   add_header X-Frame-Options "DENY" always;
   add_header X-XSS-Protection "1; mode=block" always;
-
-  location /api {
-    proxy_pass http://localhost:8000/;
-    proxy_set_header Host $host;
-  }
 
   location ~* \.(js|css|woff2|png|jpg|jpeg|gif|ico|svg)$ {
     root /usr/share/nginx/html;
